# Randomized-Subspace-QAOA

./: .gitignore  CITATION.cff  LICENSE  MANIFEST.in  README.md  index.html  pyproject.toml  run.py  script.js  style.css
.github/workflows/: ci.yml  pages.yml
code/: .gitignore  CITATION.cff  MANIFEST.in  README.md  pyproject.toml  source_manifest.json
code/experiments/: lightning_module.py  run_experiment.py  summarize_results.py  validate_release.py
code/experiments/configs/: maxcut_small.yaml
code/results/: maxcut_small.csv  summary.json
code/src/rsqaoa/: __init__.py  _cli.py  backends_pennylane.py  baselines.py  circuits.py  operator.py  randqb.py  reproduce.py  subspace_opt.py
code/src/rsqaoa/amortized/: __init__.py  protocol.py  stream_opt.py
code/src/rsqaoa_repro/: __init__.py  cli.py  evidence_manifest.json
code/src/rsqaoa_repro/bundle/experiments/: build_arxiv_source.py  freeze_amortized_protocol.py  make_amortized_paper_assets.py  reproduction-environment.yml  summarize_results.py  validate_manuscript.py  validate_release.py
code/src/rsqaoa_repro/bundle/experiments/configs/: amortized_shot_development.yaml
code/src/rsqaoa_repro/bundle/experiments/results/: summary.json
code/src/rsqaoa_repro/bundle/paper/: main.bbl  main.tex  prx-popular-summary.tex  refs.bib
code/src/rsqaoa_repro/bundle/paper/tables/: amortized_asset_manifest.json  table_development_gate.tex  table_protocol.tex  table_reproduction.tex
code/tests/: conftest.py  test_circuits.py  test_code_package.py  test_extensions.py  test_operator.py  test_pennylane_backend.py  test_randqb.py  test_subspace_opt.py
code/tools/: build_evidence_manifest.py  check_source_sync.py
experiments/: build_arxiv_source.py  freeze_amortized_protocol.py  make_amortized_paper_assets.py  merge_shards.py  run_amortized.py  run_experiment.py  summarize_results.py  validate_manuscript.py  validate_nmi_design.py  validate_release.py
experiments/configs/: amortized_development.yaml  maxcut_small.yaml  nmi_confirmatory_design.yaml
experiments/protocol/: amortized_development.json  amortized_shot_development.json
experiments/protocol/frozen_source/fe49dff724835e0a9a639191700a1a5f0c02e9e2a1c5a1152e789b7ce829fc69/experiments/: analyze_amortized.py
experiments/protocol/frozen_source/fe49dff724835e0a9a639191700a1a5f0c02e9e2a1c5a1152e789b7ce829fc69/rsqaoa/: _cli.py
experiments/protocol/frozen_source/fe49dff724835e0a9a639191700a1a5f0c02e9e2a1c5a1152e789b7ce829fc69/rsqaoa/amortized/: __init__.py  evaluators.py  optimizers.py
experiments/results/: amortized_development.csv  amortized_development_summary.json  amortized_shot_development.csv  amortized_shot_development_summary.json  maxcut_small.csv  summary.json
paper/: README_paper.md  legacy_evidence_claims.tex  main.tex  refs.bib
paper/tables/: amortized_asset_manifest.json  table1_summary.tex  table_amortized_exact_audit.tex  table_amortized_shot_audit.tex  table_reproduction.tex
rsqaoa/: graphs.py  operator.py  randqb.py  reproduce.py
rsqaoa/amortized/: budget.py  operators.py  physical_accounting.py  protocol.py  task_streams.py
scripts/: reproduce.py
src/randsubspace_qaoa/: __init__.py  qaoa.py
tests/: test_amortized_evaluators.py  test_amortized_operators.py  test_amortized_optimizers.py  test_amortized_protocol.py  test_amortized_task_streams.py  test_circuits.py  test_core.py  test_nmi_design.py  test_operator.py  test_physical_accounting.py  test_randqb.py  test_subspace_opt.py
validation/: seed_experiment.py
