[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rsqaoa"
version = "0.3.0"
description = "Task-weighted observable tangent spaces and physical resource accounting for repeated multi-angle QAOA."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Molena Huynh" }]
keywords = [
    "quantum-computing", "qaoa", "multi-angle-qaoa", "randomized-numerical-linear-algebra",
    "matrix-free", "low-rank", "active-subspace", "variational-quantum-algorithms",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23,<3",
    "torch>=2.0,<3",
    "networkx>=2.8,<4",
    "pyyaml>=6.0,<7",
]

[project.urls]
Homepage = "https://thmolena.github.io/Randomized-Subspace-QAOA/"
Repository = "https://github.com/thmolena/Randomized-Subspace-QAOA"
Issues = "https://github.com/thmolena/Randomized-Subspace-QAOA/issues"
Paper = "https://thmolena.github.io/Randomized-Subspace-QAOA/paper/main.pdf"
"Source data" = "https://github.com/thmolena/Randomized-Subspace-QAOA/tree/main/experiments/results"

[project.optional-dependencies]
pennylane = ["pennylane>=0.35,<1", "pennylane-lightning>=0.35,<1"]
dev = [
    "pytest>=7.0,<9", "pytest-cov>=4.0,<8",
    "matplotlib>=3.6,<4",
]
release = ["build>=1.2,<2", "twine>=5,<7"]

[project.scripts]
rsqaoa-experiment = "rsqaoa._cli:main"
rsqaoa-reproduce = "rsqaoa.reproduce:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["rsqaoa*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
