[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "rsqaoa"
version = "0.1.0"
description = "Randomized Subspace QAOA: adaptive, matrix-free, adjoint-free low-rank subspace optimization for multi-angle QAOA."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Molena Huynh" }]
keywords = [
    "quantum-computing", "qaoa", "multi-angle-qaoa", "randomized-numerical-linear-algebra",
    "matrix-free", "low-rank", "active-subspace", "variational-quantum-algorithms",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23",
    "torch>=2.0",
    "networkx>=2.8",
]

[project.optional-dependencies]
# CPU state-vector cross-check backend (not required by the core method).
pennylane = ["pennylane>=0.35", "pennylane-lightning>=0.35"]
# Experiment orchestration (logging/seeding/checkpoints only -- not a numerical contribution).
experiments = ["lightning>=2.2", "pandas>=1.5", "pyyaml>=6.0", "matplotlib>=3.6"]
dev = ["pytest>=7.0", "pytest-cov>=4.0"]
all = [
    "pennylane>=0.35", "pennylane-lightning>=0.35",
    "lightning>=2.2", "pandas>=1.5", "pyyaml>=6.0", "matplotlib>=3.6",
    "pytest>=7.0", "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://github.com/thmolena/Randomized-Subspace-QAOA"
Repository = "https://github.com/thmolena/Randomized-Subspace-QAOA"

[project.scripts]
rsqaoa-experiment = "rsqaoa._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
