[build-system]
requires = ["setuptools>=77"]
build-backend = "setuptools.build_meta"

[project]
name = "rsqaoa"
version = "0.3.0"
description = "Randomized Subspace QAOA: adaptive matrix-free subspace optimization with a forward-only mode for multi-angle QAOA."
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]
authors = [{ name = "Molena Huynh" }]
keywords = [
    "quantum-computing", "qaoa", "multi-angle-qaoa", "randomized-numerical-linear-algebra",
    "matrix-free", "low-rank", "active-subspace", "variational-quantum-algorithms",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Physics",
]
dependencies = [
    "numpy>=1.23,<3",
    "torch>=2.0,<3",
    "networkx>=2.8,<4",
]

[project.optional-dependencies]
# CPU state-vector cross-check backend (not required by the core method).
pennylane = ["pennylane>=0.35,<1", "pennylane-lightning>=0.35,<1"]
# Checkout-only test and manuscript-reproduction dependencies. Experiment
# scripts are repository artifacts and are deliberately not advertised as a
# wheel extra.
dev = [
    "pytest>=7.0,<9", "pytest-cov>=4.0,<8",
    "pyyaml>=6.0,<7", "matplotlib>=3.6,<4",
]
release = ["build>=1.2,<2", "twine>=5,<7"]

[project.urls]
Homepage = "https://thmolena.github.io/Randomized-Subspace-QAOA/"
Repository = "https://github.com/thmolena/Randomized-Subspace-QAOA"
Issues = "https://github.com/thmolena/Randomized-Subspace-QAOA/issues"
Paper = "https://thmolena.github.io/Randomized-Subspace-QAOA/paper/main.pdf"
"Source data" = "https://github.com/thmolena/Randomized-Subspace-QAOA/tree/main/code/results"

[project.scripts]
rsqaoa-experiment = "rsqaoa._cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
